apps/speedtest-tracker/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker-deployment
  namespace: speedtest-tracker
  labels:
    app: speedtest-tracker
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/instance: speedtest-tracker
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: speedtest-tracker
        image: lscr.io/linuxserver/speedtest-tracker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: speedtest
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 80
        volumeMounts:
        - name: speedtest-tracker-config
          mountPath: /config
      volumes:
      - name: speedtest-tracker-config
        hostPath:
          path: /media/poshox/ehdd/configs/speedtest-tracker/
          type: DirectoryOrCreate
