apps/speedtest-tracker/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  labels:
    app: speedtest-tracker
    app.kubernetes.io/instance: speedtest-tracker-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/part-of: speedtest-tracker
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: speedtest-tracker
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: speedtest-tracker
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: speedtest
    protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  externalTrafficPolicy: Cluster
