apps/speedtest-tracker/base/ingress.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: speedtest-tracker
#   namespace: speedtest-tracker
# spec:
#   entryPoints:
#   - websecure
#   routes:
#   - kind: Rule
#     match: Host(`speedtest.elposhox.dev`)
#     services:
#     - kind: Service
#       name: speedtest-tracker
#       port: 80

#   tls:
#     secretName: domain-tls

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: speedtest-tracker
#   annotations:
#     # cert-manager.io/cluster-issuer: "elposhox-dev-cluster-issuer"
#     # traefik.ingress.kubernetes.io/router.entrypoints: websecureext
# spec:
#   tls:
#     - hosts:
#         - speedtest.elposhox.dev
#       secretName: domain-tls
#   rules:
#     - host: speedtest.elposhox.dev
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: speedtest-tracker
#                 port:
#                   number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  namespace: default
  annotations:
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false" #we added this for turn off https redirection
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - speedtest.elposhox.dev
    secretName: domain-tls
  rules:
  - host: speedtest.elposhox.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: speedtest-tracker
              port:
                number: 80
